@@ -133,6 +133,7 @@ public class RDDJavaFunctions<T> extends RDDAndDStreamCommonJavaFunctions<T> {
             String keyspaceName,
             String tableName,
             int partitionsPerHost,
+            ColumnSelector partitionKeyMapper,
             RowWriterFactory<T> rowWriterFactory
     ) {
         CassandraConnector connector = defaultConnector();
@@ -142,6 +143,7 @@ public class RDDJavaFunctions<T> extends RDDAndDStreamCommonJavaFunctions<T> {
                 keyspaceName,
                 tableName,
                 partitionsPerHost,
+                partitionKeyMapper,
                 connector,
                 ctT,
                 rowWriterFactory);
